added 8 more grokking runs

--- a/src/playground/plots.ipynb
+++ b/src/playground/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,34 +2586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'results/Transformer/Grokking-bigger_shear/0803_141011-GrokkingExp-SymmetriesTest-bigger_shear-7'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SymmetriesTest_files[69]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 100 symmetry test files.\n"
+      "Found 108 symmetry test files.\n"
      ]
     }
    ],
@@ -2725,6 +2705,14 @@
     "    \"results/Transformer/Grokking-bigger_shear/0804_223822-GrokkingExp-SymmetriesTest-bigger_shear-125\",\n",
     "    \"results/Transformer/Grokking-bigger_shear/0804_231259-GrokkingExp-SymmetriesTest-bigger_shear-126\",\n",
     "    \"results/Transformer/Grokking-bigger_shear/0804_231520-GrokkingExp-SymmetriesTest-bigger_shear-127\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114916-GrokkingExp-SymmetriesTest-bigger_shear-2\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114916-GrokkingExp-SymmetriesTest-bigger_shear-4\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114916-GrokkingExp-SymmetriesTest-bigger_shear-5\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114917-GrokkingExp-SymmetriesTest-bigger_shear-3\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114917-GrokkingExp-SymmetriesTest-bigger_shear-6\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114917-GrokkingExp-SymmetriesTest-bigger_shear-7\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114917-GrokkingExp-SymmetriesTest-bigger_shear-8\",\n",
+    "    \"results/Transformer/Grokking-bigger_shear/0807_114917-GrokkingExp-SymmetriesTest-bigger_shear-9\",\n",
     "]\n",
     "print(f\"Found {len(SymmetriesTest_files)} symmetry test files.\")\n",
     "\n",
@@ -2796,7 +2784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2806,7 +2794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2850,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2866,7 +2854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3124,7 +3112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3421,7 +3409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3658,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
