--- a/src/playground/plots.ipynb
+++ b/src/playground/plots.ipynb
@@ -1222,7 +1222,6 @@
     "\n",
     "    ds_pattern = re.compile(r\"(gg_\\d+g|gg_ddbar\\d+g)\")\n",
     "\n",
-    "\n",
     "    for _, run_dirs in files_to_analyze.items():\n",
     "        for run_dir in run_dirs:\n",
     "            # ----------------------------- #\n",
@@ -1230,14 +1229,12 @@
     "            # ----------------------------- #\n",
     "            # remove cpu-evald/ from the path\n",
     "            run_dir = run_dir.replace(\"cpu-evald/\", \"\")\n",
-    "            if 'cpu-evald/' in run_dir:\n",
+    "            if \"cpu-evald/\" in run_dir:\n",
     "                network = os.path.basename(\n",
     "                    os.path.dirname(os.path.dirname(run_dir))\n",
     "                )  # e.g. 'MLP'\n",
     "            else:\n",
-    "                network = os.path.basename(\n",
-    "                    os.path.dirname(run_dir)\n",
-    "                )  \n",
+    "                network = os.path.basename(os.path.dirname(run_dir))\n",
     "            tail = os.path.basename(run_dir)  # e.g. '0722_230341-r-gg_4g-mse-lr_1e-3'\n",
     "            m_ds = ds_pattern.search(tail)\n",
     "            if not m_ds:\n",
@@ -1260,7 +1257,6 @@
     "            if target is None:\n",
     "                print(f\"[WARN] '{target_line}' not found in {log_path}\")\n",
     "                continue\n",
-    "            \n",
     "\n",
     "            # ----------------------------- #\n",
     "            # Parse key‑value pairs         #\n",
@@ -1275,18 +1271,17 @@
     "            # Fill dictionaries             #\n",
     "            # ----------------------------- #\n",
     "            unw_eff1[dataset][network] = metrics_dict.get(\"eff_1st_surr_opt_R\")\n",
-    "            unw_eff2[dataset][network] = metrics_dict.get(\"eff_2nd_surr_opt_R\") # _pm9999\n",
+    "            unw_eff2[dataset][network] = metrics_dict.get(\"eff_2nd_surr_opt_R\")  # _pm9999\n",
     "            unw_eff2[dataset][\"FC\"] = metrics_dict.get(\"eff_2nd_std\")\n",
     "            alpha2[dataset][network] = metrics_dict.get(\"alpha2\")\n",
     "            gain2[dataset][network] = metrics_dict.get(\"gain2\")\n",
-    "\n",
     "\n",
     "    for _, run_dirs in files_to_analyze.items():\n",
     "        for run_dir in run_dirs:\n",
     "            # ----------------------------- #\n",
     "            # Parse network and dataset     #\n",
     "            # ----------------------------- #\n",
-    "            if 'cpu-evald/' in run_dir:\n",
+    "            if \"cpu-evald/\" in run_dir:\n",
     "                network = os.path.basename(\n",
     "                    os.path.dirname(os.path.dirname(run_dir))\n",
     "                )  # e.g. 'MLP'\n",
@@ -1304,7 +1299,7 @@
     "            if not os.path.isfile(timing_log_path):\n",
     "                print(f\"[WARN] no timings.log in '{run_dir}'\")\n",
     "                continue\n",
-    "            \n",
+    "\n",
     "            with open(timing_log_path, \"r\") as f:\n",
     "                timing_line = next(\n",
     "                    (ln.strip() for ln in f if \"eval_time_mean\" in ln), None\n",
@@ -1321,8 +1316,12 @@
     "                (k.strip(), float(v.strip()))\n",
     "                for k, v in (pair.split(\":\", 1) for pair in kv_pairs_timing)\n",
     "            )\n",
-    "            eval_time[dataset][network][\"t_eval\"] = metrics_dict_timing.get(\"eval_time_mean\") / 300e3\n",
-    "            eval_time[dataset][network][\"ut_eval\"] = metrics_dict_timing.get(\"eval_time_std\") / 300e3\n",
+    "            eval_time[dataset][network][\"t_eval\"] = (\n",
+    "                metrics_dict_timing.get(\"eval_time_mean\") / 300e3\n",
+    "            )\n",
+    "            eval_time[dataset][network][\"ut_eval\"] = (\n",
+    "                metrics_dict_timing.get(\"eval_time_std\") / 300e3\n",
+    "            )\n",
     "    return eval_time, unw_eff1, unw_eff2, alpha2, gain2"
    ]
   },
@@ -1357,7 +1356,6 @@
     "        \"results/GNN/cpu-evald/0807_161207-r-gg_7g\",\n",
     "        \"results/GNN/cpu-evald/0808_100245-r-gg_5g\",\n",
     "    ],\n",
-    "    \n",
     "    \"MLP-gg_ddbarng\": [\n",
     "        \"results/MLP/cpu-evald/0728_000117-r-gg_ddbar2g-mse-pdrop_0p1-lr_1e-3\",\n",
     "        \"results/MLP/cpu-evald/0728_000129-r-gg_ddbar3g-mse-pdrop_0p1-lr_1e-3\",\n",
@@ -1857,7 +1855,7 @@
     "    eff1st_surr=0.9857196529196077,\n",
     "    eff2nd_surr=0.9998836837512783,\n",
     "    alpha=0.9958488152222865,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1876,8 +1874,8 @@
    "source": [
     "numerator = (1 / 0.4905400912848914) * (0.26184 * (1 / 0.00119) + 1.83638)\n",
     "denominator = (1 / 0.9998836837512783) * (\n",
-    "        (1 / 0.00119) * (0.011849378286666667 / 0.9857196529196077 + 0.26184) + 1.83638\n",
-    "    )\n",
+    "    (1 / 0.00119) * (0.011849378286666667 / 0.9857196529196077 + 0.26184) + 1.83638\n",
+    ")\n",
     "print(0.9958488152222865 * numerator / denominator)"
    ]
   },
@@ -2023,11 +2021,13 @@
     "        Patch(\n",
     "            color=factors_colors[\"1\"],\n",
     "            label=r\"$f^{\\mathrm{eff}}_1$\",\n",
-    "            alpha=0.75,),\n",
+    "            alpha=0.75,\n",
+    "        ),\n",
     "        Patch(\n",
     "            color=factors_colors[\"2\"],\n",
     "            label=r\"$f^{\\mathrm{eff}}_2$\",\n",
-    "            alpha=0.75,),\n",
+    "            alpha=0.75,\n",
+    "        ),\n",
     "    ]\n",
     "    combined_handles = legend_networks + legend_factors\n",
     "    fig.legend(\n",
