paper submitted. Cleaned up.

--- a/src/playground/plots.ipynb
+++ b/src/playground/plots.ipynb
@@ -3243,26 +3243,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.487067573201359"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pure_gain_algorithm_1[\"gg_7g\"][\"MLP\"] / gain_algorithm_1[\"gg_7g\"][\"MLP\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3524,194 +3504,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(<function __main__.tree()>,\n",
-       "            {'gg_4g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999999972,\n",
-       "                          'FC': 0.8628501833,\n",
-       "                          'LGATr': 0.9999994867,\n",
-       "                          'MLP': 0.9999965703,\n",
-       "                          'Transformer': 0.9999643666}),\n",
-       "             'gg_5g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999966002,\n",
-       "                          'FC': 0.779157822,\n",
-       "                          'LGATr': 0.9999974605,\n",
-       "                          'MLP': 0.9999994506,\n",
-       "                          'Transformer': 0.9998962663}),\n",
-       "             'gg_6g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999950664,\n",
-       "                          'FC': 0.6344567005,\n",
-       "                          'LGATr': 0.9999988206,\n",
-       "                          'MLP': 0.9999834947,\n",
-       "                          'Transformer': 0.9999972345}),\n",
-       "             'gg_7g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.999986876,\n",
-       "                          'FC': 0.4905400913,\n",
-       "                          'LGATr': 0.9999804104,\n",
-       "                          'MLP': 0.9999276642,\n",
-       "                          'Transformer': 0.9999706824}),\n",
-       "             'gg_ddbar2g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999999038,\n",
-       "                          'FC': 0.9014532697,\n",
-       "                          'LGATr': 0.9999995838,\n",
-       "                          'MLP': 0.999969605,\n",
-       "                          'Transformer': 0.9999892134}),\n",
-       "             'gg_ddbar3g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999937759,\n",
-       "                          'FC': 0.8029902519,\n",
-       "                          'LGATr': 0.9999970653,\n",
-       "                          'MLP': 0.9999864687,\n",
-       "                          'Transformer': 0.9999990625}),\n",
-       "             'gg_ddbar4g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999927949,\n",
-       "                          'FC': 0.708402089,\n",
-       "                          'LGATr': 0.9999941468,\n",
-       "                          'MLP': 0.9999494013,\n",
-       "                          'Transformer': 0.9999786223}),\n",
-       "             'gg_ddbar5g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999570068,\n",
-       "                          'FC': 0.6387061203,\n",
-       "                          'LGATr': 0.9999442252,\n",
-       "                          'MLP': 0.9999039734,\n",
-       "                          'Transformer': 0.9999416578}),\n",
-       "             'dbard_4g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.99998791,\n",
-       "                          'FC': 0.8174104026,\n",
-       "                          'LGATr': 0.9999995007,\n",
-       "                          'MLP': 0.9999957509,\n",
-       "                          'Transformer': 0.9999808163}),\n",
-       "             'dbard_5g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999775182,\n",
-       "                          'FC': 0.736467543,\n",
-       "                          'LGATr': 0.9999885794,\n",
-       "                          'MLP': 0.9999659207,\n",
-       "                          'Transformer': 0.9999845557}),\n",
-       "             'dbard_6g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999853884,\n",
-       "                          'FC': 0.6696780035,\n",
-       "                          'LGATr': 0.999976001,\n",
-       "                          'MLP': 0.9999324636,\n",
-       "                          'Transformer': 0.9999802262}),\n",
-       "             'dbard_7g': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999413651,\n",
-       "                          'FC': 0.5778219498,\n",
-       "                          'LGATr': 0.9996784788,\n",
-       "                          'MLP': 0.9996314311,\n",
-       "                          'Transformer': 0.9993729622}),\n",
-       "             'gg_ddbaruubar0g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9993441421,\n",
-       "                          'FC': 0.6210264912,\n",
-       "                          'LGATr': 0.9992830492,\n",
-       "                          'MLP': 0.9999841192,\n",
-       "                          'Transformer': 0.9999946049}),\n",
-       "             'gg_ddbaruubar1g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999685948,\n",
-       "                          'FC': 0.510739834,\n",
-       "                          'LGATr': 0.9999653025,\n",
-       "                          'MLP': 0.9990915918,\n",
-       "                          'Transformer': 0.9999346509}),\n",
-       "             'gg_ddbaruubar2g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.999772606,\n",
-       "                          'FC': 0.4637300988,\n",
-       "                          'LGATr': 0.9991639774,\n",
-       "                          'MLP': 0.9988517576,\n",
-       "                          'Transformer': 0.999883587}),\n",
-       "             'gg_ddbaruubar3g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9989336323,\n",
-       "                          'FC': 0.489376698,\n",
-       "                          'LGATr': 0.9998083723,\n",
-       "                          'MLP': 0.859260959,\n",
-       "                          'Transformer': 0.9998959562}),\n",
-       "             'gg_ddbaruubar0g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999728355,\n",
-       "                          'FC': 0.6869897407,\n",
-       "                          'LGATr': 0.9999808308,\n",
-       "                          'MLP': 0.9999831693,\n",
-       "                          'Transformer': 0.9999936239}),\n",
-       "             'gg_ddbaruubar1g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999673421,\n",
-       "                          'FC': 0.7017466551,\n",
-       "                          'LGATr': 0.9999841258,\n",
-       "                          'MLP': 0.9999677699,\n",
-       "                          'Transformer': 0.999963017}),\n",
-       "             'gg_ddbaruubar2g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999427762,\n",
-       "                          'FC': 0.7521393941,\n",
-       "                          'LGATr': 0.9999504966,\n",
-       "                          'MLP': 0.9999351362,\n",
-       "                          'Transformer': 0.9999684137}),\n",
-       "             'gg_ddbaruubar3g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999945715,\n",
-       "                          'FC': 0.6782052804,\n",
-       "                          'LGATr': 0.9999971588,\n",
-       "                          'MLP': 0.9999033957,\n",
-       "                          'Transformer': 0.9999988349}),\n",
-       "             'ddbar_uubar2g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9993348364,\n",
-       "                          'FC': 0.5074404375,\n",
-       "                          'LGATr': 0.9987728143,\n",
-       "                          'MLP': 0.9999912091,\n",
-       "                          'Transformer': 0.9995902799}),\n",
-       "             'ddbar_uubar3g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9998660229,\n",
-       "                          'FC': 0.4353266662,\n",
-       "                          'LGATr': 0.9974365836,\n",
-       "                          'MLP': 0.9995222365,\n",
-       "                          'Transformer': 0.9990788756}),\n",
-       "             'ddbar_uubar4g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999413719,\n",
-       "                          'FC': 0.4110393357,\n",
-       "                          'LGATr': 0.9999822535,\n",
-       "                          'MLP': 0.9981564587,\n",
-       "                          'Transformer': 0.9982203065}),\n",
-       "             'ddbar_uubar5g_co1': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9973975202,\n",
-       "                          'FC': 0.397152621,\n",
-       "                          'LGATr': 0.9999336232,\n",
-       "                          'MLP': 0.9043246664,\n",
-       "                          'Transformer': 0.9982342821}),\n",
-       "             'ddbar_uubar2g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9997773535,\n",
-       "                          'FC': 0.5062118215,\n",
-       "                          'LGATr': 0.9999984223,\n",
-       "                          'MLP': 0.9997467155,\n",
-       "                          'Transformer': 0.9999917591}),\n",
-       "             'ddbar_uubar3g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9999365279,\n",
-       "                          'FC': 0.4683360849,\n",
-       "                          'LGATr': 0.9994481513,\n",
-       "                          'MLP': 0.9992915117,\n",
-       "                          'Transformer': 0.9999888348}),\n",
-       "             'ddbar_uubar4g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9992377019,\n",
-       "                          'FC': 0.4629216907,\n",
-       "                          'LGATr': 0.999723355,\n",
-       "                          'MLP': 0.9990981925,\n",
-       "                          'Transformer': 0.9999949127}),\n",
-       "             'ddbar_uubar5g_co2': defaultdict(<function __main__.tree()>,\n",
-       "                         {'GNN': 0.9991565761,\n",
-       "                          'FC': 0.4367851856,\n",
-       "                          'LGATr': 0.9991500595,\n",
-       "                          'MLP': 0.9987313743,\n",
-       "                          'Transformer': 0.9999116893})})"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unw_eff2_algo1"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3720,7 +3512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3846,7 +3638,41 @@
     "            antialiased=True,\n",
     "        )\n",
     "\n",
-    "        # Use your midpoint method, but DO NOT cut the lines\n",
+    "        def contour_midpoints_safe(cs):\n",
+    "            \"\"\"\n",
+    "            Return one (x,y) midpoint per contour level using cs.allsegs,\n",
+    "            skipping levels with no valid (>=2-point) segment.\n",
+    "            \"\"\"\n",
+    "            positions = []\n",
+    "            for segs in cs.allsegs:  # list of segments (arrays of shape [m,2]) for this level\n",
+    "                best_v = None\n",
+    "                best_len = 0.0\n",
+    "                for v in segs:\n",
+    "                    if v is None or len(v) < 2:\n",
+    "                        continue\n",
+    "                    d = np.hypot(np.diff(v[:, 0]), np.diff(v[:, 1]))\n",
+    "                    L = float(d.sum())\n",
+    "                    if L > best_len:\n",
+    "                        best_len = L\n",
+    "                        best_v = v\n",
+    "                        best_d = d\n",
+    "                if best_v is None or best_len == 0.0:\n",
+    "                    # no drawable path for this level (fully masked, too small, etc.)\n",
+    "                    positions.append(None)\n",
+    "                    continue\n",
+    "\n",
+    "                s = np.concatenate([[0.0], np.cumsum(best_d)])\n",
+    "                mid = 0.5 * s[-1]\n",
+    "                i = int(np.searchsorted(s, mid) - 1)\n",
+    "                i = max(0, min(i, len(best_v) - 2))\n",
+    "                denom = (s[i+1] - s[i])\n",
+    "                t = 0.0 if denom <= 0 else (mid - s[i]) / denom\n",
+    "                x = best_v[i, 0] * (1 - t) + best_v[i + 1, 0] * t\n",
+    "                y = best_v[i, 1] * (1 - t) + best_v[i + 1, 1] * t\n",
+    "                positions.append((x, y))\n",
+    "\n",
+    "            # clabel accepts fewer points than levels; filter out Nones\n",
+    "            return [p for p in positions if p is not None]\n",
     "        manual_pts = contour_midpoints_safe(cs)\n",
     "        if manual_pts:\n",
     "            texts = ax.clabel(\n",
